--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="book_cover_height">128dp</dimen>
-    <dimen name="book_cover_width">90.5dp</dimen><!-- 128dp * (21F/29.7F) -->
+    <dimen name="book_grid_min_cell_width">128dp</dimen>
+    <dimen name="book_grid_max_cell_width">200dp</dimen>
+    <dimen name="book_detail_cover_height">256dp</dimen>
+    <dimen name="book_detail_section_spacing">12dp</dimen>
+    <dimen name="book_detail_subsection_spacing">4dp</dimen>
+    <dimen name="cart_sheet_peek_height">72dp</dimen>
+    <dimen name="cart_sheet_corner_radius">24dp</dimen>
+    <dimen name="cart_sheet_padding">16dp</dimen>
 </resources>
